[tool.poetry]
name = "pyos-agent"
version = "0.1.0"
description = "PyOS-Agent: Agente autônomo com interface FastAPI, segurança robusta e capacidade de automação de desktop"
authors = ["Anatalia <anatalia@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "pyos", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic-ai = "^0.0.1"
loguru = "^0.7.2"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
mss = "^9.0.1"
pyautogui = "^0.9.53"
pydantic = "^2.5.0"
uvicorn = "^0.24.0"
pydantic-settings = "^2.1.0"
# NEW: Advanced Features v2.0
chromadb = "^0.5.0"
sentence-transformers = "^2.2.0"
rich = "^13.0.0"
streamlit = "^1.28.0"
streamlit-option-menu = "^0.3.0"
plotly = "^5.18.0"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.1"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "ANN"]
ignore = ["E501", "ANN101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src/pyos --cov-report=html"
